# claire

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  PLAN.md  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts  supervisord.conf
client/: project.yml
client/Claire.xcodeproj/: project.pbxproj
client/Claire.xcodeproj/project.xcworkspace/xcuserdata/jonathanchristensen.xcuserdatad/: UserInterfaceState.xcuserstate
client/Claire.xcodeproj/xcuserdata/jonathanchristensen.xcuserdatad/xcschemes/: xcschememanagement.plist
client/Claire/Resources/: AppIcon.icns  Info.plist  afe_model_no_relu_v57.smpl  afe_params_v57.json  v26_03_06_00_33.json  vad_model_v57.smpl
client/Claire/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
client/Claire/Sources/App/: ClaireApp.swift
client/Claire/Sources/Audio/: AudioManager.swift
client/Claire/Sources/Models/: CallManager.swift
client/Claire/Sources/Native/: Claire-Bridging-Header.h  ClaireAudioBridge.h  ClaireAudioBridge.mm
client/Claire/Sources/Network/: ClaireWebSocketClient.swift
client/Claire/Sources/Views/: ContentView.swift
client/Frameworks/SMPLAudioProcessing.xcframework/: Info.plist
client/Frameworks/SMPLAudioProcessing.xcframework/ios-arm64/Headers/: SMPLAFEProcessor.h
client/Frameworks/SMPLAudioProcessing.xcframework/macos-arm64/Headers/: module.modulemap
client/native/: CMakeLists.txt  SmplBuildInfo.h  build-ios.sh
gradle/: libs.versions.toml
server/: build.gradle.kts
server/src/jvmMain/kotlin/com/atria/module/: SttProcessor.kt
server/src/jvmMain/kotlin/com/claire/: Application.kt  Koin.kt
server/src/jvmMain/kotlin/com/claire/llm/: AnthropicClient.kt  LocalLlmClient.kt
server/src/jvmMain/kotlin/com/claire/routing/: Routing.kt  UnifiedRoute.kt
server/src/jvmMain/kotlin/com/claire/stt/: SttNativeProcessor.kt  SttServerClient.kt
server/src/jvmMain/kotlin/com/claire/tts/: TtsServerClient.kt
server/src/jvmMain/resources/: claire-system-prompt.txt
stt-server/: requirements.txt  server.py
tts-server/: requirements.txt  server.py
